--- a/AzureAD.WebApi.SPOnline.ConsoleApp/App.config
+++ b/AzureAD.WebApi.SPOnline.ConsoleApp/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+
+  <appSettings>
+
+   
+    <add key="ida:ClientId" value="Replace the Client ID value" />
+    <add key="ida:RedirectUri" value="replace the Redirect URL value" />
+    <add key="ida:Resource" value="replace the Resource value" />
+
+   
+    <add key="ApiBaseAddress" value="http://localhost:59311/" />
+
+  </appSettings>
 </configuration>
