--- a/AzureAD.WebApi.SPOnline.WebApi/Web.config
+++ b/AzureAD.WebApi.SPOnline.WebApi/Web.config
@@ -4,6 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="Audience" value="APPURI" />
+    <add key="Tenant" value="TenantGUID" />
+    <add key="ClientID" value="ClientID" />
+    <add key="ClientSecret" value="ClientSecret" />
+    <add key="SharePointURL" value="https://[yourtenant].SharePoint.com" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
